# ERIS

./: pyproject.toml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/common/: annotations.py  deps.py  repositories.py  schemas.py  service.py
backend/app/core/: __init__.py  app_exceptions.py  database.py  http_exceptions.py  settings.py
backend/app/moderation/: deps.py  exceptions.py  models.py  repositories.py  service.py
backend/app/moderation/routers/: moderator_role_application.py  role_application.py
backend/app/moderation/schemas/: role_application.py
backend/app/products/: router.py
backend/app/sellers/: exceptions.py  models.py  repositories.py
backend/app/sellers/routers/: profile.py
backend/app/sellers/schemas/: profile.py
backend/app/sellers/services/: onboarding.py  profile.py
backend/app/users/: config.py  deps.py  exceptions.py  models.py  permissions.py  repositories.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 386523fca3d6_.py  64a8ace891f0_.py  b19ef2853c36_.py  c3cbde48b8be_.py  d333f8722dc3_.py
frontend/src/: App.jsx  index.css
frontend/src/api/: apiError.js  authApi.js  httpClient.js
frontend/src/auth/: config.js
frontend/src/components/: ProtectedRoute.jsx  PublicOnlyRoute.jsx
frontend/src/components/auth/: AuthField.jsx  AuthLayout.jsx
frontend/src/components/profile/: ProfileCard.jsx
frontend/src/pages/: AuthPage.jsx  ProfilePage.jsx
frontend/src/utils/: tokenStorage.js
planning/: ideas.md
